[package]
name = "random-stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["blocking"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "3", features = ["derive"]}
uuid = "0.8"
fake = {version = "2.4", features = ["derive", "uuid"] }
rand = "0.8"
scraper = "0.12.0"
tokio-stream = "0.1.8"
async-stream = "0.3.2"
futures-util = "0.3.19"
