[package]
name = "test-driven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
wiremock = "0.5"

[dependencies]
reqwest = { version = "0.11.9", features = ["blocking", "json"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "3", features = ["derive"]}
uuid= { version = "0.8", features = ["v4"] }
fake = {version = "2.4", features = ["derive", "uuid"] }
scraper = "0.12.0"
chrono = "0.4"
actix-web = "4.0.0-rc.1"
actix-http = "3.0.0-rc.1"
thiserror = "1"
config="0.11"
rand = { version = "0.8", features = ["std_rng"] }
quickcheck = "~0.9"
quickcheck_macros = "~0.9"
actix-rt="2"
